1999-12-02  Michael Natterer  <mitch@gimp.org>

	* app/palette.c: Enable the popup menu containing only "New" in
	the whole area inside the palette's scrolled window.
	This way you don't have to correctly hit the small line a newly
	created palette consists of.

	* app/gradient.c
	* app/gradient_select.c: Set the "Gradient" clist column to it's
	optimal size but ensure a minimal size, so the column title is
	fully visible with all languages and font sizes.

1999-12-02  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c: Default to "Cancel" in the "Really Quit?" dialog.

	* app/app_procs.c
	* app/brush_select.c
	* app/gimpbrushlist.c: Call brush_select_[freeze|thaw]_all() from
	brushes_init() and brushes_free(), so refreshing the brushes from
	plugins/scripts is faster.

	* app/brightness_contrast.c
	* app/color_balance.c
	* app/curves.c
	* app/file_new_dialog.c
	* app/hue_saturation.c
	* app/levels.c
	* app/posterize.c
	* app/threshold.c:
	Reorder the action area buttons: [ "OK" "Reset" "Cancel" ]

	* app/menus.c: Some more cleanups in the menu code. Reorder
	<Image>/Filters/Misc only if it exists. Generalized
	menu_translate() in preparation for correctly supporting catalogs
	which only exist sometimes (like gimp-perl).

	* app/gradient.c
	* app/gradient_select.c: Save some lines of code by using
	gtk_clist_new_with_titles() instead of gtk_clist_new().

	* libgimp/gimpunitmenu.c: Code cleanup and made the clist titles
	of the unit selection un-clickable.

Thu Dec  2 01:18:33 MET 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/common/grid.c: more chainbuttons and nicer dialog layout 

Tue Nov 30 21:23:39 GMT 1999 Andy Thomas <alt@gimp.org>

	* app/info_window.c

	Fix crash where display closed & info dialog had not been used.
	Yasuhiro SHIRASAKI pointed this problem out. Thanks.

Mon Nov 29 18:17:34 PST 1999 Manish Singh <yosh@gimp.org>

	* configure.in: support for optional gap_decode_mpeg plugin

	* plug-ins/gap/Makefile.am
	* plug-ins/gap/README