@@ -1,3 +1,11 @@
+Thu Dec  2 23:49:17 GMT 1999 Andy Thomas <alt@gimp.org>
+
+	* app/bezier_select.c
+
+	Fixed bug number #3904. - [gimp-bug] no undo for path strokes.
+	Undo menu item is now enabled correctly after the path has been
+	stroked.
+
 1999-12-02  Michael Natterer  <mitch@gimp.org>
 
 	* app/palette.c: Enable the popup menu containing only "New" in
